Updated sonarqube changes